@@ -1,3 +1,8 @@
+2005-11-21  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* src/buoh.c: Do disk access in an idle function when saving comic
+	list changes.
+
 2005-11-16  Bastien Nocera <hadess@hadess.net>
 
 	* configure.in:
